# legaia

./: Cargo.toml  README.md
.opencode/: AGENTS.md
crates/legaia-assets/: Cargo.toml
crates/legaia-assets/examples/: extract.rs  test_tmd_convert.rs
crates/legaia-assets/src/: converter.rs  extraction.rs  extractor.rs  lib.rs  manifest.rs
crates/legaia-assets/src/formats/: mod.rs
crates/legaia-engine/: Cargo.toml
crates/legaia-engine/src/: core_state.rs  lib.rs  setup.rs  state.rs
crates/legaia-engine/src/audio/: mod.rs
crates/legaia-engine/src/battle/: mod.rs
crates/legaia-engine/src/field/: mod.rs
crates/legaia-engine/src/graphics/: debug.rs  mod.rs
crates/legaia-engine/src/input/: mod.rs
crates/legaia-engine/src/menu/: mod.rs
crates/legaia-game/: Cargo.toml
crates/legaia-game/assets/: README.md
crates/legaia-game/src/: main.rs
crates/legaia_combat/: Cargo.toml  README.md
crates/legaia_combat/examples/: simple_battle.rs
crates/legaia_combat/src/: damage.rs  entity.rs  lib.rs  script.rs  systems.rs
crates/legaia_scripting/: Cargo.toml  README.md
crates/legaia_scripting/examples/: simple_battle.rs
crates/legaia_scripting/src/: components.rs  damage.rs  entity.rs  lib.rs  script.rs
crates/psxutils/: Cargo.toml  README.md
crates/psxutils/examples/: extract_all_raw.rs  extract_prot_sequential.rs  extract_tims.rs  extract_tmds.rs  extract_vabs.rs  extract_vags.rs  extract_xa.rs  list_files.rs  lzss_decompress.rs  parse_formats.rs  read_xa_file.rs  scan_prot_dat.rs  test_legaia_tmd.rs  test_tim_convert.rs
crates/psxutils/src/: lib.rs  scanner.rs
crates/psxutils/src/cdrom/: mod.rs  streaming.rs
crates/psxutils/src/formats/: dat.rs  lzss.rs  mod.rs  tim.rs  tmd.rs  vab.rs  vag.rs  xa.rs  xa_adpcm.rs
crates/psxutils/src/formats/tim/: convert.rs  mod.rs  parse.rs  types.rs
docs/: README.md  architecture.md  asset-extraction.md  asset-formats.md  core-state-implementation.md
docs/decompilation/: README.md  combat-ai-extraction-guide.md  entity-structure.md  main.md  render_and_display_frame.md
docs/decompilation/sessions/: 2026-02-15-combat-logic-search.md  2026-02-15-entity-callback-system-discovered.md  2026-02-15-menu-system-complete.md  2026-02-15-player-data-loader-complete.md  2026-02-15-state-machine-complete.md  2026-02-16-first-ai-callback-extracted.md
psxutils/: Cargo.toml
psxutils/examples/: psxdumpbin.rs
psxutils/src/: cdxa.rs  debug.rs  lib.rs
scripts/combat/: boss_example.rhai  damage_formulas.rhai  enemy_slime.rhai
scripts/entities/: boss_example.lua  combat_ai_0x801d1344.lua  damage_formulas.lua  enemy_slime.lua
