[workspace]
resolver = "2"
members = [
    "crates/legaia-assets",
    "crates/legaia-engine",
    "crates/legaia-game", "crates/psxutils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Legend of Legaia Rewrite Contributors"]

[workspace.dependencies]
# Shared dependencies across the workspace
bevy = { version = "0.14", default-features = false }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# PSX-specific utilities
bitflags = "2.9"
bytemuck = { version = "1.23", features = ["derive"] }
memmap2 = "0.9"
num-traits = "0.2"
rayon = "1.10"

# CLI tools
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1  # Improve debug performance slightly

[profile.release]
lto = "thin"
codegen-units = 1
