[workspace]
resolver = "2"
members = [
    "crates/legaia-assets",
    "crates/legaia-engine",
    "crates/legaia-game",
    "crates/legaia_combat",
    "crates/psxutils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Legend of Legaia Rewrite Contributors"]

[workspace.dependencies]
# Shared dependencies across the workspace
bevy = { version = "0.18", default-features = false }
thiserror = "2.0.18"
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.1"

# PSX-specific utilities
bitflags = "2.11"
bytemuck = { version = "1.25", features = ["derive"] }
memmap2 = "0.9.10"
num-traits = "0.2.19"
rayon = "1.11"

# CLI tools
clap = { version = "4.5.58", features = ["derive"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.dev]
opt-level = 1  # Improve debug performance slightly

[profile.release]
lto = "thin"
codegen-units = 1
