[package]
name = "psxutils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PlayStation 1 format parsers and utilities"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Binary parsing
bytemuck = { workspace = true }

# Memory-mapped file I/O for disc images
memmap2 = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
# Testing utilities
anyhow = { workspace = true }
image = "0.25"
