[package]
name = "psxutils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PlayStation 1 format parsers and utilities"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Binary parsing
bytemuck = { workspace = true }

# Memory-mapped file I/O for disc images
memmap2 = { workspace = true }

# Logging
tracing = { workspace = true }

# Image processing (optional, feature-gated)
image = { version = "0.25", optional = true }

# Progress bars (optional, for CLI tools)
indicatif = { version = "0.17", optional = true }

# Parallel processing (optional, for batch operations)
rayon = { version = "1.8", optional = true }

# JSON serialization (optional, for metadata export)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
# Feature for asset extraction tools
extraction = ["image", "indicatif", "rayon", "serde", "serde_json"]

[dev-dependencies]
# Testing utilities
anyhow = { workspace = true }
image = "0.25"
